--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -29,11 +29,12 @@
 			<artifactId>keycloak-tomcat8-adapter</artifactId>
 			<version>${keycloak.version}</version>
 		</dependency>
-		<dependency>
+		
+		<!-- <dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-spring-boot-adapter</artifactId>
 			<version>${keycloak.version}</version>
-		</dependency>
+		</dependency>  -->
 
 		<dependency>
 			<groupId>junit</groupId>
