--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,7 +9,7 @@
 
 	<properties>
 		<keycloak.version>2.5.4.Final</keycloak.version>
-		<!-- <junit.version>4.12</junit.version>  -->
+		<!-- <junit.version>4.12</junit.version> -->
 	</properties>
 
 	<parent>
@@ -29,18 +29,22 @@
 			<artifactId>keycloak-tomcat8-adapter</artifactId>
 			<version>${keycloak.version}</version>
 		</dependency>
-		
-		<!-- <dependency>
-			<groupId>org.keycloak</groupId>
-			<artifactId>keycloak-spring-boot-adapter</artifactId>
-			<version>${keycloak.version}</version>
-		</dependency>  -->
+
+		<!-- <dependency> <groupId>org.keycloak</groupId> <artifactId>keycloak-spring-boot-adapter</artifactId> 
+			<version>${keycloak.version}</version> </dependency> -->
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.4</version>
+		</dependency>
+
+	
 	</dependencies>
 
 </project>
