--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -44,7 +44,16 @@
 			<version>3.4</version>
 		</dependency>
 
-	
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+		</dependency>
 	</dependencies>
 
 </project>
